fix: Update site description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Official Hikstore Online Store | Everything you need for your next Mountain Adventure is available online. Check out Clothing, Shoes, Technical Hardware & Avalanche Safety Equipment. Are you ready?"
+      content="Experience the seamless shopping experience with static e-commerce websites crafted with the power of JavaScript, offering modern and interactive online stores for your convenience."
     />
     <meta
       name="keywords"
